--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-     "name": "munasar",
+     "name": "munasar/php",
     "description": "Waa PHP Fremwork somali ah",
     "license": [
         "RPL-1.5",
