--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,20 @@
 {
-     "name": "caaqil/php",
-    "description": "Waa PHP Fremwork somali ah",
+    "name": "caaqil/php",
+    "description": "Waa Php Fremwork somali ah",
+    "require": {
+        "illuminate/database": "^5.7",
+        "slim/slim": "^3.0",
+        "slim/twig-view": "^2.4",
+        "illuminate/events": "^5.7",
+        "respect/validation": "^1.1",
+        "slim/csrf": "^0.8.3",
+        "slim/flash": "^0.4.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Caaqil\\" : "app"
+        } 
+    },
     "license": [
         "RPL-1.5",
         "proprietary"
@@ -22,19 +36,5 @@
             "homepage": "https://github.com/caaqilyare",
             "role": "Developer"
         }
-    ],
-    "require": {
-        "illuminate/database": "^5.7",
-        "slim/slim": "^3.0",
-        "slim/twig-view": "^2.4",
-        "illuminate/events": "^5.7",
-        "respect/validation": "^1.1",
-        "slim/csrf": "^0.8.3",
-        "slim/flash": "^0.4.0"
-    } ,
-    "autoload": {
-        "psr-4": {
-            "Caaqil\\" : "app"
-        } 
-    }
+
 }
