--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
     "authors": [
         {
             "name": "Munasar Abuukar",
-            "email": "dj.caaqil@@gmail.com",
+            "email": "dj.caaqil@gmail.com",
             "homepage": "http://munasar.ga",
             "role": "Developer"
         }
