--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "caaqil/php",
-    "type": "php fremwork",
+    "type": "fremwork",
     "description": "Logging for PHP 5.3",
     "keywords": ["log","logging"],
     "homepage": "https://github.com/caaqilyare",
