--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "type": "fremwork",
     "description": "Logging for PHP 5.3",
     "keywords": ["log","logging"],
+    "version": "1.0.0",
     "homepage": "https://github.com/caaqilyare",
     "license": "MIT",
     "authors": [
