--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "caaqil/php",
-    "type": "fremwork",
+    "type": "project",
     "description": "Logging for PHP 5.3",
     "keywords": ["log","logging"],
     "version": "1.0.0",
